flask-hello-world/flask-hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-hello-world
    app.kubernetes.io/component: flask-hello-world
    app.kubernetes.io/instance: flask-hello-world
    app.kubernetes.io/name: flask-hello-world
    app.kubernetes.io/part-of: jupyterhub
  name: flask-hello-world
spec:
  ports:
  - name: 8080-tcp
    port: 8080
  selector:
    app: flask-hello-world
    deploymentconfig: flask-hello-world
