flask-hello-world/flask-hello-world-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: flask-hello-world
    app.kubernetes.io/component: flask-hello-world
    app.kubernetes.io/instance: flask-hello-world
    app.kubernetes.io/name: flask-hello-world
    app.kubernetes.io/part-of: jupyterhub
  name: flask-hello-world
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: flask-hello-world
    weight: 100
  wildcardPolicy: None
